tests/type/errors/bad_procedure_call1.xi
foo():int {
    foo()
    return 1
}